--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,4 +9,8 @@
         </div>
     </header>
 
+    <section>
+        <p class="sectionText">This is home page.</p>
+    </section>
+
 <%- include("footer") -%>
