--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,23 +8,20 @@
             </ul>
         </div>
     </header>
-
+    
     <section>
         <div id="formCell">
             <form action="/contact" method="post">
                 <h2>Get in touch</h2>
                 <div id="formInput">
-                    <input type="text" name="senderName0" id="name" placeholder="Your Name">
-                    <input type="email" name="senderEmail0" id="email"  placeholder="Email ID">
-                    <input type="number" id="phone" name="senderPhone0" placeholder="Phone no.">
-                    <textarea id="message" name="senderMessage0" placeholder=" Your message here..." ></textarea>
+                    <input type="text" name="senderName0" id="name" placeholder="Your Name" required autofocus>
+                    <input type="email" name="senderEmail0" id="email"  placeholder="Email ID" required>
+                    <input type="number" id="phone" name="senderPhone0" placeholder="Phone no." required>
+                    <textarea id="message" name="senderMessage0" placeholder=" Your message here..." required></textarea>
                 </div>
-                <button type="submit">Send</button>
+                <button type="submit" class="formButton">Send</button>
             </form>
         </div>
     </section>
-
-    <!-- Adding javascript file -->
-    <!-- <script src="../script.js"></script> -->
 
 <%- include("footer") -%>
